# AIOps_labeling

./: AI_labeling.html  README.md  test_file_status.py
X-AnyLabeling-main/anylabeling/services/auto_labeling/: model_manager.py
anylabeling/: __init__.py  app.py
anylabeling/configs/: xanylabeling_config.yaml
anylabeling/services/auto_labeling/: model_manager.py
anylabeling/services/auto_labeling/__base__/: rtmdet.py
anylabeling/utils/: classes.py  yolo.py
anylabeling/views/: mainwindow.py
anylabeling/views/labeling/: label_widget.py  shape.py
anylabeling/views/labeling/widgets/: canvas.py  chatbot_dialog.py  label_dialog.py
tools/: classes_convert.py
x-trainlabeling-pipeline/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
x-trainlabeling-pipeline/airflow/: docker-compose.yaml
x-trainlabeling-pipeline/airflow/dags/: x_trainlabeling_dag.py
x-trainlabeling-pipeline/configs/: classes.yaml  dataset.yolov8-seg.yaml  project.yaml
x-trainlabeling-pipeline/src/autolabel/: convert.py  sam_wrapper.py  yolo_infer.py
x-trainlabeling-pipeline/src/common/: io_utils.py  logging_utils.py  viz_utils.py
x-trainlabeling-pipeline/src/dataset/: augment.py  split.py
x-trainlabeling-pipeline/src/feedback/: active_learning.py
x-trainlabeling-pipeline/src/ingest/: pull_data.py
x-trainlabeling-pipeline/src/preprocess/: preprocess.py
x-trainlabeling-pipeline/src/qc/: qc_rules.py
x-trainlabeling-pipeline/src/train/: train_yolov8_seg.py
