[project]
name = "x-trainlabeling-pipeline"
version = "0.1.0"
description = "E2E training labeling pipeline (Airflow + YOLOv8 Segmentation)"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
